# band-coordination-service

./: .claudeignore  .gitignore  CLAUDE.md  PRD.md  README.md
backend/: .env.example  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_profile_and_instruments.py  0003_userprofile_split.py
backend/apps/common/: __init__.py  instruments.py  mixins.py
backend/apps/events/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/events/migrations/: 0001_initial.py  (+5 more)
backend/apps/groups/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/invites/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/escala/: asgi.py  settings.py  urls.py  wsgi.py
backend/escala/settings/: base.py  production.py
frontend/: SYSTEM_DESIGN.md  authz.py  constants.py  instrument_icons.py  main.py  pyproject.toml  theme.py
frontend/api/: auth.py  client.py  events.py  groups.py  invites.py  song_suggestions.py  songs.py
frontend/components/: app_bar_user.py  styled.py
frontend/pages/: add_song_page.py  config_event_members_page.py  config_event_songs_page.py  config_events_page.py  config_group_page.py  config_group_settings_page.py  config_members_page.py  config_songs_page.py  dashboard_page.py  event_detail_page.py  group_page.py  invites_page.py  login_page.py  profile_page.py  register_page.py
frontend/state/: app_state.py
frontend/utils/: date_utils.py
(+26 files in other folders)
